salt-front/build_error.txt
    Checking salt-front v0.1.0 (/Users/kevin/projects/lattice/salt-front)
error[E0609]: no field `0` on type `&types::Type`
   --> src/codegen/stmt.rs:362:75
    |
362 |                 if let Some(idx) = info.field_order.iter().position(|f| f.0 == field_name) {
    |                                                                           ^ unknown field

error[E0609]: no field `1` on type `types::Type`
   --> src/codegen/stmt.rs:365:57
    |
365 |                     let elem_ty = info.field_order[idx].1.clone();
    |                                                         ^ unknown field

warning: unreachable pattern
   --> src/codegen/type_bridge.rs:167:13
    |
167 |             _ => Err(format!("Unsupported type for MLIR conversion: {:?}", self)),
    |             ^ no value can reach this
    |
note: multiple earlier patterns match some of the same values
   --> src/codegen/type_bridge.rs:167:13
    |
 30 |             Type::I32 => Ok("i32".to_string()),
    |             --------- matches some of the same values
 31 |             Type::I64 => Ok("i64".to_string()),
    |             --------- matches some of the same values
 32 |             Type::I16 | Type::U16 => Ok("i16".to_string()),
    |             --------------------- matches some of the same values
 33 |             Type::I8 | Type::U8 => Ok("i8".to_string()),
    |             ------------------- matches some of the same values
...
167 |             _ => Err(format!("Unsupported type for MLIR conversion: {:?}", self)),
    |             ^ ...and 17 other patterns collectively make this unreachable
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `val`
   --> src/codegen/type_bridge.rs:539:32
    |
539 |     let init_val = if let Some(val) = &g.init {
    |                                ^^^ help: if this is intentional, prefix it with an underscore: `_val`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `disc_val` is never read
   --> src/codegen/expr/mod.rs:244:28
    |
244 |         let mut disc_val = -1;
    |                            ^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `idx`
   --> src/codegen/expr/mod.rs:628:34
    |
628 | ...   if let Some((idx, payload, disc)) = info.variants.iter().enumerate().find(|(_, (n, _, _))| n == variant_name).map(|(i, v)| (i, v.1....
    |                    ^^^ help: if this is intentional, prefix it with an underscore: `_idx`

For more information about this error, try `rustc --explain E0609`.
warning: `salt-front` (lib) generated 4 warnings
error: could not compile `salt-front` (lib) due to 2 previous errors; 4 warnings emitted
